[Test] 테스트 관련 설정 내용 추가